Pad activity rows always to avoid close links on mobile

--- a/gtork/web/static/css/site.css
+++ b/gtork/web/static/css/site.css
@@ -1,5 +1,6 @@
 .activity-row{
-    min-height: 2em;
+    padding-bottom: 0.5em;
+    padding-top: 0.5em;
 }
 
 .activity-row textarea{
